# pyodide-importer

./: .readthedocs.yml  CHANGELOG.md  LICENSE  README.md  conftest.py  setup.cfg
.github/workflows/: publish_pypi.yml  test_core.yml
docs/: api.md  changelog.md  conf.py  index.md
pyodide_importer/: __init__.py  api.py  import_hook.py
pyodide_importer/tests/: __init__.py  test_browser.py  test_import_hook.py  test_native.py
templates/: index.html
test/import_test/: file_module.py
test/import_test/regular_module/: __init__.py  submodule2.py
test_modules/: file_module.py
test_modules/regular_module/: __init__.py  submodule.py  submodule2.py
