[metadata]
name = pyodide-importer
version = attr: pyodide_importer.__version__
author = ryanking13
author_email = def6488@gmail.com
url = https://github.com/ryanking13/pyodide-importer
description = Import hook for Pyodide
long_description = file: README.md
long_description_content_type = text/markdown
keywords = pyodide
license = MIT
license_file = LICENSE
platform = any
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
project_urls = 
    Bug Tracker = https://github.com/ryanking13/pyodide-importer/issues

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.8
install_requires = requests

[options.extras_require]
test = pytest

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar